<resources>
    <string name="search_providers_list_key" translatable="false">search_providers_list</string>
    <string name="locale_key" translatable="false">app_locale</string>
    <string name="search_types_list_key" translatable="false">search_type_list</string>
    <string name="auto_update_key" translatable="false">auto_update</string>
    <string name="auto_update_plugins_key" translatable="false">auto_update_plugins</string>
    <string name="auto_download_plugins_key" translatable="false">auto_download_plugins_key2</string>
    <string name="skip_update_key" translatable="false">skip_update_key</string>
    <string name="prerelease_update_key" translatable="false">prerelease_update</string>
    <string name="manual_check_update_key" translatable="false">manual_check_update</string>
    <string name="fast_forward_button_time_key" translatable="false">fast_forward_button_time</string>
    <string name="benene_count" translatable="false">benene_count</string>
    <string name="subtitle_settings_key" translatable="false">subtitle_settings_key</string>
    <string name="test_providers_key" translatable="false">test_providers_key</string>
    <string name="subtitle_settings_chromecast_key" translatable="false">subtitle_settings_chromecast_key</string>
    <string name="quality_pref_key" translatable="false">quality_pref_key</string>
    <string name="quality_pref_mobile_data_key" translatable="false">quality_pref_mobile_data_key</string>
    <string name="player_default_key" translatable="false">player_default_key</string>
    <string name="prefer_limit_title_key" translatable="false">prefer_limit_title_key</string>
    <string name="prefer_limit_title_rez_key" translatable="false">prefer_limit_title_rez_key</string>
    <string name="apk_installer_key" translatable="false">apk_installer_key</string>
    <string name="video_buffer_size_key" translatable="false">video_buffer_size_key</string>
    <string name="video_buffer_length_key" translatable="false">video_buffer_length_key</string>
    <string name="video_buffer_clear_key" translatable="false">video_buffer_clear_key</string>
    <string name="video_buffer_disk_key" translatable="false">video_buffer_disk_key</string>
    <string name="use_system_brightness_key" translatable="false">use_system_brightness_key</string>
    <string name="swipe_enabled_key" translatable="false">swipe_enabled_key</string>
    <string name="playback_speed_enabled_key" translatable="false">playback_speed_enabled_key</string>
    <string name="player_resize_enabled_key" translatable="false">player_resize_enabled_key</string>
    <string name="pip_enabled_key" translatable="false">pip_enabled_key</string>
    <string name="double_tap_enabled_key" translatable="false">double_tap_enabled_key</string>
    <string name="double_tap_pause_enabled_key" translatable="false">double_tap_pause_enabled_key</string>
    <string name="double_tap_seek_time_key" translatable="false">double_tap_seek_time_key2</string>
    <string name="android_tv_interface_off_seek_key" translatable="false">android_tv_interface_off_seek_key</string>
    <string name="android_tv_interface_on_seek_key" translatable="false">android_tv_interface_on_seek_key</string>
    <string name="swipe_vertical_enabled_key" translatable="false">swipe_vertical_enabled_key</string>
    <string name="autoplay_next_key" translatable="false">autoplay_next_key</string>
    <string name="display_sub_key" translatable="false">display_sub_key</string>
    <string name="show_fillers_key" translatable="false">show_fillers_key</string>
    <string name="show_trailers_key" translatable="false">show_trailers_key</string>
    <string name="show_kitsu_posters_key" translatable="false">show_kitsu_posters_key</string>
    <string name="random_button_key" translatable="false">random_button_key</string>
    <string name="provider_lang_key" translatable="false">provider_lang_key</string>
    <string name="dns_key" translatable="false">dns_key</string>
    <string name="jsdelivr_proxy_key" translatable="false">jsdelivr_proxy_key</string>
    <string name="download_path_key" translatable="false">download_path_key</string>
    <string name="download_parallel_key" translatable="false">download_parallel_key</string>
    <string name="download_concurrent_key" translatable="false">download_concurrent_key</string>
    <string name="download_path_key_visual" translatable="false">download_path_key_visual</string>
    <string name="app_name_download_path" translatable="false">CloudPlay</string>
    <string name="app_layout_key" translatable="false">app_layout_key</string>
    <string name="primary_color_key" translatable="false">primary_color_key</string>
    <string name="restore_key" translatable="false">restore_key</string>
    <string name="backup_key" translatable="false">backup_key</string>
    <string name="automatic_backup_key" translatable="false">automatic_backup_key</string>
    <string name="prefer_media_type_key" translatable="false">prefer_media_type_key_2</string>
    <string name="app_theme_key" translatable="false">app_theme_key</string>
    <string name="episode_sync_enabled_key" translatable="false">episode_sync_enabled_key</string>
    <string name="log_enabled_key" translatable="false">log_enabled_key</string>
    <string name="show_logcat_key" translatable="false">show_logcat_key</string>
    <string name="bottom_title_key" translatable="false">bottom_title_key</string>
    <string name="poster_ui_key" translatable="false">poster_ui_key</string>
    <string name="overscan_key" translatable="false">overscan_key</string>
    <string name="poster_size_key" translatable="false">poster_size_key</string>
    <string name="subtitles_encoding_key" translatable="false">subtitles_encoding_key</string>
    <string name="override_site_key" translatable="false">override_site_key</string>
    <string name="redo_setup_key" translatable="false">redo_setup_key</string>
    <string name="filter_sub_lang_key" translatable="false">filter_sub_lang_key</string>
    <string name="pref_filter_search_quality_key" translatable="false">pref_filter_search_quality_key</string>
    <string name="enable_nsfw_on_providers_key" translatable="false">enable_nsfw_on_providers_key</string>
    <string name="skip_startup_account_select_key" translatable="false">skip_startup_account_select_key</string>
    <string name="enable_skip_op_from_database" translatable="false">enable_skip_op_from_database</string>
    <string name="rotate_video_key" translatable="false">rotate_video_key</string>
    <string name="auto_rotate_video_key" translatable="false">auto_rotate_video_key</string>
    <string name="biometric_key" translatable="false">biometric_key</string>
    <string name="extra_info_format" formatted="true" translatable="false">%d %s | %s</string>
    <string name="storage_size_format" formatted="true" translatable="false">%s • %s</string>
    <string name="download_size_format" formatted="true" translatable="false">%s / %s</string>
    <string name="episode_name_format" formatted="true" translatable="false">%s %s</string>
    <string name="ffw_text_format" formatted="true" translatable="false">+%d</string>
    <string name="rew_text_format" formatted="true" translatable="false">-%d</string>
    <string name="ffw_text_regular_format" formatted="true" translatable="false">%d</string>
    <string name="rew_text_regular_format" formatted="true" translatable="false">%d</string>
    <string name="rating_format" formatted="true" translatable="false">%s/10.0</string>
    <string name="year_format" formatted="true" translatable="false">%d</string>
    <string name="app_dub_sub_episode_text_format" formatted="true">%1$s Ep %2$d</string>
    <string name="cast_format" formatted="true">Cast: %s</string>
    <string name="next_episode_format" formatted="true">Episode %d will be released in</string>
    <string name="next_season_episode_format" formatted="true">Season %1$d Episode %2$d will be released in</string>
    <string name="next_episode_time_day_format" formatted="true">%1$dd %2$dh %3$dm</string>
    <string name="next_episode_time_hour_format" formatted="true">%1$dh %2$dm</string>
    <string name="next_episode_time_min_format" formatted="true">%dm</string>
    <string name="title_downloads">Downloads</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="advanced_search_des">Gives you the search results separated by provider</string>
    <string name="show_fillers_settings">Show filler episode for anime</string>
    <string name="show_trailers_settings">Show trailers</string>
    <string name="kitsu_settings">Show posters from Kitsu</string>
    <string name="pref_filter_search_quality">Hide selected video quality in search results</string>
    <string name="automatic_plugin_updates">Automatic plugin updates</string>
    <string name="automatic_plugin_download">Automatically download plugins</string>
    <string name="automatic_plugin_download_summary">Automatically install all not yet installed plugins from added repositories.</string>
    <string name="app_language">App Language</string>
    <string name="poster_ui_settings">Toggle UI elements on poster</string>
    <string name="dns_pref">DNS over HTTPS</string>
    <string name="dns_pref_summary">Useful for bypassing ISP blocks</string>
    <string name="jsdelivr_proxy">GitHub Proxy</string>
    <string name="jsdelivr_proxy_summary">Bypass blocking of raw github URLs using jsDelivr. May cause updates to be delayed by few days.</string>
    <string name="add_site_pref">Clone site</string>
    <string name="add_site_summary">Add a clone of an existing site, with a different URL</string>
    <string name="download_path_pref">Download path</string>
    <string name="pref_category_bypass">ISP Bypasses</string>
    <string name="pref_category_extensions">Extensions</string>
    <string name="pref_category_looks">Looks</string>
    <string name="pref_category_ui_features">Features</string>
    <string name="random_button_settings">Random Button</string>
    <string name="random_button_settings_desc">Show random button on Homepage and Library</string>
    <string name="app_layout">App Layout</string>
    <string name="primary_color_settings">Primary color</string>
    <string name="app_theme_settings">App theme</string>
    <string name="bottom_title_settings">Poster title location</string>
    <string name="bottom_title_settings_des">Put the title under the poster</string>
    <string name="confirm_before_exiting_title">Confirm before exiting</string>
    <string name="confirm_before_exiting_desc">Show dialog before exiting the app</string>
    <string name="telegram_title">GRUP TELEGRAM</string>
    <string name="telegram_desc">Join komunitas CloudPlay dan dapatkan update terbaru 🚀</string>
    <string name="telegram_key">telegram_key</string>
    <string name="support_title">BERI DUKUNGAN</string>
    <string name="support_desc">Dukung kami agar CloudPlay terus berkembang ❤️</string>
    <string name="support_key">support_key</string>
    <string name="update_plugins">Update Plugins</string>
    <string name="update_plugins_manually">Update plugins manually</string>
    <string name="manual_update_plugins_key" translatable="false">manual_update_plugins</string>
    <string name="download_parallel_settings_des">How many different items that can be downloaded in parallel</string>
    <string name="parallel_downloads">Parallel downloads</string>
    <string name="concurrent_connections">Concurrent connections</string>
    <string name="concurrent_connections_settings_des">How many concurrent connections each download can use while downloading</string>
    <string name="overscan_settings_des">Changes the bounds of the screen</string>
    <string name="overscan_settings">Overscan</string>
    <string name="poster_size_settings_des">Changes size of posters</string>
    <string name="poster_size_settings">Poster size</string>
</resources>