<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Bahasa Aplikasi -->
    <Preference
        android:icon="@drawable/ic_baseline_language_24"
        android:key="@string/locale_key"
        android:title="@string/app_language" />

    <!-- Grup Telegram -->
    <Preference
        android:icon="@drawable/ic_github_logo"
        android:key="@string/telegram_key"
        android:title="@string/telegram_title"
        android:summary="@string/telegram_desc" />

    <!-- BERI DUKUNGAN -->
    <Preference
        android:icon="@drawable/ic_github_logo"
        android:key="@string/support_key"
        android:title="@string/support_title"
        android:summary="@string/support_desc" />

    <!-- Bypass ISP -->
    <PreferenceCategory android:title="@string/pref_category_bypass">

        <Preference
            android:icon="@drawable/ic_baseline_add_24"
            android:key="@string/override_site_key"
            android:summary="@string/add_site_summary"
            android:title="@string/add_site_pref" />

        <Preference
            android:icon="@drawable/ic_baseline_dns_24"
            android:key="@string/dns_key"
            android:summary="@string/dns_pref_summary"
            android:title="@string/dns_pref" />

        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_github_logo"
            android:key="@string/jsdelivr_proxy_key"
            android:summary="@string/jsdelivr_proxy_summary"
            android:title="@string/jsdelivr_proxy" />

    </PreferenceCategory>

    <!-- Unduhan -->
    <PreferenceCategory android:title="@string/title_downloads">

        <Preference
            android:icon="@drawable/netflix_download"
            android:key="@string/download_path_key"
            android:title="@string/download_path_pref" />

        <SeekBarPreference
            android:defaultValue="3"
            android:icon="@drawable/arrow_or_edge_24px"
            android:key="@string/download_parallel_key"
            android:max="10"
            android:summary="@string/download_parallel_settings_des"
            android:title="@string/parallel_downloads"
            app:adjustable="true"
            app:min="1"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true" />

        <SeekBarPreference
            android:defaultValue="3"
            android:icon="@drawable/arrow_and_edge_24px"
            android:key="@string/download_concurrent_key"
            android:max="10"
            android:summary="@string/concurrent_connections_settings_des"
            android:title="@string/concurrent_connections"
            app:adjustable="true"
            app:min="1"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true" />

    </PreferenceCategory>

</PreferenceScreen>